# sales-ape-interview-task

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/src/: db.py  main.py  session_store.py
backend/src/ai/: models.py  nodes.py  state_machine.py
backend/src/ai/prompts/: track_recommendation.py
backend/src/api/: auth_utils.py  schemas.py
backend/src/api/routes/: auth.py  chat.py
backend/src/spotify/: models.py  spotify_tracks_top_10000.csv  spotify_utils.py  tables.py
backend/src/spotify/scripts/: load_spotify_data.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CustomChat.tsx  LoginCard.tsx
